United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6861660 OopMapBlock count/size confusion
6861660 : OopMapBlock count/size confusion

Details
Type:
Bug
Submit Date:
2009-07-17
Status:
Closed
Updated Date:
2010-04-28
Project Name:
JDK
Resolved Date:
2010-04-28
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs11
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
Code in instanceKlass, classFileParser and elsewhere assumes that sizeof(OopMapBlock) <= sizeof(HeapWord), and thus confuses the count of oop map blocks with their size in words in several places.  If OopMapBlock is made larger than a HeapWord, the VM crashes quickly.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b37c246bf7ce
                                     
2009-09-25
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/5a53320cd23f
                                     
2009-09-04
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/5a53320cd23f
                                     
2009-09-03
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/b37c246bf7ce
                                     
2009-08-25
SUGGESTED FIX

Patch attached as 6861660.patch.
                                     
2009-08-25
EVALUATION

See description.  Change the code to use counts of OopMapBlocks and to convert to HeapWord sizes when necessary.
                                     
2009-07-17



Hardware and Software, Engineered to Work Together