6861660: OopMapBlock count/size confusion

Reviewed-by: tonyp, iveresov